feat: criação dos endpoints de serviço